--- a/frontend-wallet/package.json
+++ b/frontend-wallet/package.json
@@ -16,8 +16,10 @@
     "bcryptjs": "^2.4.3",
     "bip39": "^3.1.0",
     "crypto-js": "^4.2.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
