--- a/Docker-MongoDB/docker-compose.yml
+++ b/Docker-MongoDB/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - MONGO_INITDB_DATABASE=${MONGO_DATABASE}
       - MONGO_INITDB_USERNAME=${MONGO_USER}
       - MONGO_INITDB_PASSWORD=${MONGO_PASSWORD}
-    restart: always
+    # restart: always
 
 volumes:
   mongo-data:
